--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -46,9 +46,11 @@
             <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
             <img src="/resources/img/LogoWIAC2025.png" alt="logoWIAC">
             <img src="/resources/img/logoaata.png" alt="logoAATA">
-            <a href="/tyc" class="tycFooter">Terms & conditions</a>
+            <div class="footerAconteiner">
+                <a href="/tyc" class="tycFooter">T&C</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
             <a class="aFooter" href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
+            </div>
             
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
