--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -89,6 +89,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 .containerFooter a{
     margin-right: 2rem;
@@ -204,7 +205,7 @@ main{
     margin: auto;
     
 }
-.bannerHome h2{
+.homeH2{
     position: absolute;
     color: #FFFFFF;
     font-size: 5rem;
@@ -243,7 +244,6 @@ main{
     justify-content: center;
     align-items: center;
     height: max-content;
-
 }
 .message{
     width: 70%;
@@ -1005,30 +1005,250 @@ main{
 @media screen and (max-width: 576px) {
 .menu-icon {
     display: block;
+    background-color: #008080;
+    padding: 0 50%;
+    color:#FFF
     }
 #menu-toggle:checked ~ .navbar ul {
     display: block;
+    text-align: center;
     }
 .navbar ul{
     display: none;
     position: absolute;
     left: 0;
-    top: 15.5%;
-    background-color: rgb(15, 101, 159);
-    width: 100%;
+    top: .5rem;
+    background-color: #008080;
+    width: 100vw;
     height: max-content;
     padding-bottom: 20px;
     }
-.btnMail{
-        background-color: #009900;
-        font-size: 20px;
+    .navbar ul li{
+        width: 100%;
         text-decoration: none;
-        color: white;
-        padding: 3px 5px;
-        border-radius: 5px;
+        border-bottom: 1px solid #fff;
     }
-.parrafoHome{
-    font-size: 20px;
+    .navbar ul a{
+        color: #fff;
+        width: max-content;
+    }
+
+.header{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-content: center;
+    height: max-content;
+    width: 100vw;
+}
+.header lable{
+    width: 1rem;
+}
+.logo{
+    width: 6rem;
+    margin: auto;
+}
+/* footer */
+.footerAconteiner a{
+    font-size: 1rem;
+    width: max-content;
+    padding: 0;
+    display: block;
+    margin:.5rem;
+}
+.containerFooter img{
+    width: 3rem;
+}
+
+/* home */
+.bannerHome{
+    width: 100%;
+    height: 20rem;
+    margin: 0;
+    padding:0;
+}
+.bannerHome img{
+    width: 100vw;
+    height: 100%;
+    object-fit: cover;
+}
+.homeH2{
+    font-size: 2rem;
+    position: absolute;
+    top:11.5rem;
+    width: max-content;
+}
+.bannerHome h3{
+    font-size: 2rem;
+    top:14rem;
+    text-align: center;
+}
+.datepara{
+    font-size: 1.1rem;
+    position: absolute;
+    top:20rem;
+}
+.hometoptext{
+    position: absolute;
+    top:10rem;
+    font-size: 1.5rem;
+}
+
+.containerMain{
+    width: 100vw;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    height: max-content;
+}
+.message{
+    width: 100vw;
+}
+
+.homeSchedule{
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: max-content;
+}
+.schlL{
+    width: 100%;
+}
+.schlR{
+    width: 100%;
+}
+.daySchl{
+    display: block;
+    width: max-content;
+    text-align: center;
+    width: 100%;
+}
+.schlL .subtitle{
+    display: block;
+}
+
+.dropdown{
+    width: 100%;
+}
+.bookingContainer{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: max-content;
+}
+.booking{
+    display: flex;
+    flex-direction: column;
+    height: max-content;
+}
+.bookingText{
+    width: 90%;
+}
+.bookingText span{
+    bottom: 0;
+}
+.card{
+    width: 70%;
+}
+/* inscription */
+.containerForm{
+    width: 100%;
+}
+#registrationForm{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.rowForm{
+    flex-direction: column;
+    margin: auto;
+    width: 90%;
+}
+.lineForm{
+    width: max-content;
+}
+.lineForm label{
+    max-width: 60vw;
+}
+.lineForm input{
+    max-width: 90vw;
+}
+.lineForm select{
+    max-width: 90vw;
+}
+.lineForm textarea{
+    max-width: 90vw;
+}
+.aceptTYC{
+    width: 30%;
+}
+#terms-error{
+    display: block;
+}
+.aceptTYC{
+    width: 90vw;
+}
+.acepTYClabel{
+    width: 100vw;
+}
+
+
+/* participants */
+.containerParticipants{
+    height: 40vh;
+}
+/* schedule */
+.scheduleInfo{
+    width: 95%;
+}
+.scheduleDays{
+    width: 100%;
+    margin-top: 1rem;
+}
+.scheduleDays img{
+    width: 100%;
+    height: 218%;
+    position: absolute;
+    left: 0;
+}
+.day{
+    width: 100%;
+    height: max-content;
+}
+.day span{
+    width: 90%;
+    height: max-content;
+}
+.day span p{
+    height: 3rem;
+    margin-bottom: .5rem;
+}
+/* turism */
+
+.turismHotel{
+    flex-direction: column;
+}
+/* T&C */
+.notesContainer{
+    width: 90%;
+}
+.subSumaryContainer{
+    flex-direction: column;
+}
+.inscDetails, .paymentInstruction{
+    width: 90%;
+}
+/* registerSuccess */
+.regSuccess{
+    width: 90%;
+}
+/* admin-form */
+.tablacontainer{
+    display: flex;
+    flex-direction: column;
 }
 
 }
