--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -34,7 +34,7 @@
         <div class="bannerHome">
             <img src="resources/img/bannerWIAC.jpg" alt="Torneo de arqueria">
             <p class="hometoptext">Welcome to the</p>
-                <h2>Word Indoor</h2> 
+                <h2 class="homeH2">World Indoor</h2> 
                 <h3>Archery Championship 2025</h3>
             <p class="datepara">Nov-03-2025 | Buenos Aires, Argentina </p>
         </div>
@@ -47,7 +47,7 @@
                     Dear archers and fans of archery,
                     We are very pleased to invite you to the WIAC 2025 World Archery Championships, organized by the Argentine Archery Association. <br> The event will take place from November-03-2025 to November-08-2025 and will be held according to the rules and regulations of IFAA. The competition is open to members from all over the world, limited to 288 archers in good standing of member countries. The championship will take place at the majestic <strong>Santa Clara del Mar Sportcenter</strong> . This place, known for its beautiful scenery and rich culture, will be the perfect setting for this world-class event. <br> Finally, on behalf of the Argentine Archery Association, the event’s Organizing Committee and all Argentine archers, we warmly welcome you to Argentina for the WIAC 2025 World Archery Championship. Sincerely,</p><br>
                 <p class="pMsg"><strong>Gustavo Stancato</strong></p>
-                <p>Chairman of the Organising Committee for the WIAC 2025 World Archery Championships</p></div>
+                <p class="msgBottom">Chairman of the Organising Committee for the WIAC 2025 World Archery Championships</p></div>
         </div>
         <div class="timer">
                 <div class="fecha">
@@ -193,15 +193,16 @@
                 </div>
             </div>
         </div>
-    </main>
     <footer class="footer">
         <div class="containerFooter">
             <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
             <img src="/resources/img/LogoWIAC2025.png" alt="logoWIAC">
             <img src="/resources/img/logoaata.png" alt="logoAATA">
-            <a href="/tyc" class="tycFooter">Terms & conditions</a>
+            <div class="footerAconteiner">
+                <a href="/tyc" class="tycFooter">T&C</a>
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
             <a class="aFooter" href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
+            </div>
             
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
