--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -208,6 +208,7 @@
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
     <div class="loader"></div>
+    <script src="resources/js/ulclick.js"></script>
     <script src="resources/js/timer.js"></script>
     <script src="resources/js/schlMenu.js"></script>
 </body>
