--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -160,6 +160,7 @@
     </footer>
     <div class="loader"></div>
     <script src="resources/js/slider.js"></script>
+    <script src="resources/js/ulclick.js"></script>
 </body>
 
 </html>
