--- a/views/home/participants.ejs
+++ b/views/home/participants.ejs
@@ -56,5 +56,6 @@
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
     <div class="loader"></div>
+    <script src="resources/js/ulclick.js"></script>
 </body>
 </html>
