--- a/views/home/regSumary.ejs
+++ b/views/home/regSumary.ejs
@@ -120,6 +120,7 @@
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
     <div class="loader"></div>
+    <script src="resources/js/ulclick.js"></script>
 </body>
 
 </html>
