--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -25,7 +25,7 @@
                         <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                         <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li> 
-                        <li><a class="linkNav" href="/turism">TURISM</a></li>  
+                        <li><a class="linkNav" href="/turism">TOURISM</a></li>  
                         <li><a class="linkNav" href="/tyc">T&C</a></li>        
                     </ul>
         </nav>
