--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -27,7 +27,7 @@
             <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
             <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
             <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
-            <li><a class="linkNav" href="/turism">TURISM</a></li>
+            <li><a class="linkNav" href="/turism">TOURISM</a></li>
             <li><a class="linkNav" href="/tyc">T&C</a></li>
         </ul>
     </nav>
@@ -209,10 +209,10 @@
                 </div>
                 <div class="lineForm aceptTYC">
                     <label class="acepTYClabel">
-                        I accept the <a href="/tyc">terms & conditions</a> (*)
                         <input type="checkbox" id="termsCheckbox">
+                        I accept the <a href="/tyc">terms & conditions</a>(*)
+                    </label>    
                         <span class="error-message" id="terms-error"></span>
-                    </label>
                 </div>
                 <div class="btnContainerInsc">
                     <button class="btnInsc btnReg " type="button" id="checkout-btn" >Register</button>
