--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -28,7 +28,7 @@
                 <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                 <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                 <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
-                <li><a class="linkNav" href="/turism">TURISM</a></li>
+                <li><a class="linkNav" href="/turism">TOURISM</a></li>
                 <li><a class="linkNav" href="/tyc">T&C</a></li>
 
             </ul>
@@ -36,13 +36,26 @@
     </header>
     <main class="turisMain">
         <div class="turisContainer">
-            <h1 class="title">Turism</h1>
+            <h1 class="title">Tourism</h1>
             <div class="turismHotel">
+                <h3>HOTEL KONKE</h3>
+                <p>Mar del Plata</p>
+                <div class="hotelRight">
+                    <div class="slider">
+                        <div class="slides">
+                            <div class="slide"><img src="/resources/img/konke1.jpg" alt="Image 1"></div>
+                            <div class="slide"><img src="/resources/img/konke2.jpg" alt="Image 2"></div>
+                            <div class="slide"><img src="/resources/img/konke3.jpg" alt="Image 3"></div>
+                            <div class="slide"><img src="/resources/img/konke4.jpg" alt="Image 4"></div>
+                            <div class="slide"><img src="/resources/img/konke5.jpg" alt="Image 5"></div>
+                            <div class="slide"><img src="/resources/img/konke6.jpg" alt="Image 6"></div>
+                        </div>
+                        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+                        <button class="next" onclick="moveSlide(1)">&#10095;</button>
+                    </div>
+                </div>
                 <div class="hotelLeft">
-                    <h3>HOTEL KONKE</h3>
-                    <p>Mar del Plata</p>
                     <a href="https://hotelkonkemardelplata.com/">www.hotelkonkemardelplata.com</a>
-                    
                     <table class="table">
                         <thead>
                             <tr>
@@ -75,25 +88,25 @@
                     <p>reservas@hotelkonkemardelplata.com</p>
                     </span>
                 </div>
-                <div class="hotelRight">
+            </div>
+            <div class="turismHotel">
+                <h3>HOTEL NOVI</h3>
+                    <p>Mar del Plata</p>
+                <div class="hotelRight">       
                     <div class="slider">
                         <div class="slides">
-                            <div class="slide"><img src="/resources/img/konke1.jpg" alt="Image 1"></div>
-                            <div class="slide"><img src="/resources/img/konke2.jpg" alt="Image 2"></div>
-                            <div class="slide"><img src="/resources/img/konke3.jpg" alt="Image 3"></div>
-                            <div class="slide"><img src="/resources/img/konke4.jpg" alt="Image 4"></div>
-                            <div class="slide"><img src="/resources/img/konke5.jpg" alt="Image 5"></div>
-                            <div class="slide"><img src="/resources/img/konke6.jpg" alt="Image 6"></div>
+                            <div class="slide"><img src="/resources/img/novi1.jpg" alt="Image 1"></div>
+                            <div class="slide"><img src="/resources/img/novi2.jpg" alt="Image 2"></div>
+                            <div class="slide"><img src="/resources/img/novi3.jpg" alt="Image 3"></div>
+                            <div class="slide"><img src="/resources/img/novi4.jpg" alt="Image 4"></div>
+                            <div class="slide"><img src="/resources/img/novi5.jpg" alt="Image 5"></div>
+                            <div class="slide"><img src="/resources/img/novi6.jpg" alt="Image 6"></div>
                         </div>
                         <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
                         <button class="next" onclick="moveSlide(1)">&#10095;</button>
                     </div>
                 </div>
-            </div>
-            <div class="turismHotel">
                 <div class="hotelLeft">
-                    <h3>HOTEL NOVI</h3>
-                    <p>Mar del Plata</p>
                     <table class="table">
                         <thead>
                             <tr>
@@ -121,20 +134,6 @@
                         <p>Whatsapp +5492235373923</p>
                         <p>hotelnovi@gmail.com</p>
                     </span>
-                </div>
-                <div class="hotelRight">
-                    <div class="slider">
-                        <div class="slides">
-                            <div class="slide"><img src="/resources/img/novi1.jpg" alt="Image 1"></div>
-                            <div class="slide"><img src="/resources/img/novi2.jpg" alt="Image 2"></div>
-                            <div class="slide"><img src="/resources/img/novi3.jpg" alt="Image 3"></div>
-                            <div class="slide"><img src="/resources/img/novi4.jpg" alt="Image 4"></div>
-                            <div class="slide"><img src="/resources/img/novi5.jpg" alt="Image 5"></div>
-                            <div class="slide"><img src="/resources/img/novi6.jpg" alt="Image 6"></div>
-                        </div>
-                        <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
-                        <button class="next" onclick="moveSlide(1)">&#10095;</button>
-                    </div>
                 </div>
             </div>
             <div class="needHelpContainer turismNeed">
