--- a/views/home/tyc.ejs
+++ b/views/home/tyc.ejs
@@ -27,7 +27,7 @@
                 <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                 <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                 <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
-                <li><a class="linkNav" href="/turism">TURISM</a></li> 
+                <li><a class="linkNav" href="/turism">TOURISM</a></li> 
                 <li><a class="linkNav" href="/tyc">T&C</a></li>
             </ul>
         </nav>
@@ -251,7 +251,7 @@
             <h5>Your Rights</h5>
             <p>You have the right to access, update or delete your personal data at any time. You can also request the
                 limitation of the processing of your data or its portability. To exercise these rights, contact us
-                through aata.argentina.presidente@gmail.com.</p>
+                through <a href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'>wiac2025@gmail.com</a></p>
             <h5>Changes to the Privacy Policy</h5>
             <p>
                 We reserve the right to modify this privacy policy at any time. Any changes will be published on this
