--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -580,7 +580,8 @@ main{
     text-align: center;
 }
 .aForm{
-    color: blue
+    color: #FFF;
+    font-weight: 800;
 }
 .rowForm{
     display: flex;
@@ -837,13 +838,14 @@ main{
     width: 100%;
     height: max-content;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     margin-bottom: 1rem;
+    text-align: center;
 }
 .hotelLeft{
     width: 20rem;
-    height: 30rem;
+    height: max-content;
     margin: auto;
     text-align: center;
     display: flex;
@@ -866,7 +868,7 @@ main{
     color:#008080;
 }
 
-.hotelLeft h3{
+.turismHotel h3{
     font-size: 2rem;
     background-color: #008080;
     color: white;
@@ -877,7 +879,7 @@ main{
 }
 .table{
     border:1px solid black;
-    margin: auto;
+    margin: 1rem auto;
 }
 
 .table th, td {
@@ -889,7 +891,7 @@ main{
     background-color: #f4f4f4;
 }
 .hotelRight{
-    width: 70%;
+    width: 100%;
     height: 100%;
     margin: auto;
 }
@@ -1184,17 +1186,28 @@ main{
     max-width: 90vw;
 }
 .aceptTYC{
-    width: 30%;
+    display: block;
+    height: max-content;
+    width: 90%;
+    background-color: transparent;
 }
 #terms-error{
     display: block;
-}
-.aceptTYC{
-    width: 90vw;
+    margin-top: 1rem;
 }
 .acepTYClabel{
-    width: 100vw;
+    margin: auto;
+    width: 90vw;
+    background-color: white;
+    position: relative;
+    left: 20px;
+    padding: .3rem;
 }
+.btnInsc{
+    padding: .5rem 1rem;
+    width: 11rem;
+}
+
 
 
 /* participants */
@@ -1211,7 +1224,7 @@ main{
 }
 .scheduleDays img{
     width: 100%;
-    height: 218%;
+    height: 440%;
     position: absolute;
     left: 0;
 }
@@ -1224,8 +1237,8 @@ main{
     height: max-content;
 }
 .day span p{
-    height: 3rem;
-    margin-bottom: .5rem;
+    height: 4rem;
+    margin-bottom: 1rem;
 }
 /* turism */
 
