--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="resources/js/loader.js"></script>
     <title>Home | WIAC 2025</title>
+    <meta name="description" content="wiac Inscription to world indoor archery championship 2025"></meta>
+    <meta keywords ="world indoor archery championship 2025 wiac2025 wiac"></meta>
 </head>
 <body>
     <header class="header">
