--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -38,7 +38,7 @@
             <p class="hometoptext">Welcome to the</p>
                 <h2 class="homeH2">World Indoor</h2> 
                 <h3>Archery Championship 2025</h3>
-            <p class="datepara">Nov-03-2025 | Buenos Aires, Argentina </p>
+            <p class="datepara">Nov-03-2025 | Santa Clara del Mar Prov. de Buenos Aires, Argentina </p>
         </div>
         <div class="containerMain">
             <img src="resources/img/LogoWIAC2025.png" alt="logoWIAC2025">
@@ -47,7 +47,7 @@
                 <br>
                 <p>
                     Dear archers and fans of archery,
-                    We are very pleased to invite you to the WIAC 2025 World Archery Championships, organized by the Argentine Archery Association. <br> The event will take place from November-03-2025 to November-08-2025 and will be held according to the rules and regulations of IFAA. The competition is open to members from all over the world, limited to 288 archers in good standing of member countries. The championship will take place at the majestic <strong>Santa Clara del Mar Sportcenter</strong> . This place, known for its beautiful scenery and rich culture, will be the perfect setting for this world-class event. <br> Finally, on behalf of the Argentine Archery Association, the event’s Organizing Committee and all Argentine archers, we warmly welcome you to Argentina for the WIAC 2025 World Archery Championship. Sincerely,</p><br>
+                    We are very pleased to invite you to the WIAC 2025 World Archery Championships, organized by the Argentine Archery Association. <br> The event will take place from November-03-2025 to November-08-2025 and will be held according to the rules and regulations of IFAA. The competition is open to members from all over the world, limited to 288 archers in good standing of member countries. The championship will take place at the majestic <strong>Santa Clara del Mar Sportcenter.</strong><strong> It will consist of 1 flint round and 2 indoor rounds.</strong><br> Finally, on behalf of the Argentine Archery Association, the event’s Organizing Committee and all Argentine archers, we warmly welcome you to Argentina for the WIAC 2025 World Archery Championship. Sincerely,</p><br>
                 <p class="pMsg"><strong>Gustavo Stancato</strong></p>
                 <p class="msgBottom">Chairman of the Organising Committee for the WIAC 2025 World Archery Championships</p></div>
         </div>
@@ -101,7 +101,8 @@
                     <div class="dropdown-content">
                         <ul>
                             <li>8hs - 16hs - Registration and equipment inspection</li>
-                            <li>8hs - 17hs - Practice range open </li>
+                            <li>8hs - 16hs - Practice range open </li>
+                            <li class="roundTipe"><strong>INDOOR ROUND</strong></li>
                             <li>9hs - 12hs - 1st Round </li>
                             <li>12.30hs - 15.30hs - 2nd Round</li>
                             <li>16hs - 19hs - 3rd Round</li>
@@ -112,7 +113,8 @@
                     <button class="daySchl">Wednesday 11-05-2025</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>8hs - 13hs - Practice Range Open </li>
+                            <li>8hs - 16hs - Practice Range Open </li>
+                            <li class="roundTipe"><strong>GROUPS A and B FLINT ROUND</strong></li>
                             <li>8.30hs - 11hs - 1st Round </li>
                             <li>11.30hs - 14hs - 2nd Round</li>
                             <li>14.30hs - 17hs - 3rd Round</li>
@@ -124,7 +126,8 @@
                     <button class="daySchl">Thursday 11-06-2025</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>8hs - 13hs - Practice Range Open </li>
+                            <li>8hs - 16hs - Practice Range Open </li>
+                            <li class="roundTipe"><strong>GROUPS C and D FLINT ROUND</strong></li>
                             <li>8.30hs - 11hs - 1st Round </li>
                             <li>11.30hs - 14hs - 2nd Round</li>
                             <li>14.30hs - 17hs - 3rd Round</li>
@@ -136,8 +139,8 @@
                     <button class="daySchl">Friday 11-07-2025</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>8hs - 16hs - Registration and equipment inspection</li>
-                            <li>8hs - 17hs - Practice range open </li>
+                            <li>8hs - 16hs - Practice range open </li>
+                            <li class="roundTipe"><strong>INDOOR ROUND</strong></li>
                             <li>9hs - 12hs - 1st Round </li>
                             <li>12.30hs - 15.30hs - 2nd Round</li>
                             <li>16hs - 19hs - 3rd Round</li>
