--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -42,13 +42,12 @@
                     will culminate with the March of Nations and the Opening Ceremony at 3:00 pm, a symbolic event that
                     will celebrate unity and the competitive spirit.<br>
                     <strong>Tuesday, November 4th:</strong><br> This day will be dedicated to the official competition. From 8:00 am to 7:00 pm,
-                    participants will have the opportunity to demonstrate their skills in the first three rounds, after
+                    participants will have the opportunity to demonstrate their skills in the first <strong>INDOOR ROUND</strong>, after
                     a new registration and practice period in the early hours of the day.<br>
-                    <strong>Wednesday, November 5th and Thursday November 6th:</strong><br>The open practice field and the four rounds of the
-                    day will continue, from 8:30 am to 5:30 pm. During these days, competitors will seek to consolidate
+                    <strong>Wednesday, November 5th and Thursday November 6th:</strong><br>The open practice field and the <strong>FLINT ROUND </strong>divided in the two days, from 8:30 am to 5:30 pm. During these days, competitors will seek to consolidate
                     their positions to advance in the tournament.<br>
                     <strong>Friday, November 7th:</strong><br> It will be a crucial day, with
-                    the practice field open from 8:00am and three more rounds of competition that will last until 7:00
+                    the practice field open from 8:00am and the last <strong>INDOOR ROUND</strong> of competition that will last until 7:00
                     pm., where the best athletes will seek to secure a place on the podium.<br>
                     <strong>Saturday, November 8th:</strong><br>
                     On this day, the event will close with the Awards Ceremony, which will begin at
@@ -74,7 +73,8 @@
                 <div class="day"><span>
                         <h4>Tuesday</h4>
                         <p>8hs-16hs</p>
-                        <p>8hs-17hs</p>
+                        <p>8hs-16hs</p>
+                        <p></p>
                         <p>9hs-12hs</p>
                         <p>12.30hs-15.30hs</p>
                         <p>16hs-19hs</p>
@@ -82,13 +82,15 @@
                         <h4>11-04-2025</h4>
                         <p>Registration and equipment inspection</p>
                         <p>Practice range open</p>
+                        <p class="roundDay">INDOOR ROUND</p>
                         <p>1st Round</p>
                         <p>2nd Round</p>
                         <p>3rd Round</p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Wednesday</h4>
-                        <p>8hs-13hs</p>
+                        <p>8hs-16hs</p>
+                        <p></p>
                         <p>8.30hs-11hs</p>
                         <p>11.30hs-14hs</p>
                         <p>14.30hs-17hs</p>
@@ -96,6 +98,7 @@
                     </span><span>
                         <h4>11-05-2025</h4>
                         <p>Practice Range Open</p>
+                        <p class="roundDay">GROUPS A and B FLINT ROUND</p>
                         <p>1st Round</p>
                         <p>2nd Round</p>
                         <p>3rd Round</p>
@@ -103,7 +106,8 @@
                     </span></div>
                 <div class="day"><span>
                         <h4>Thursday</h4>
-                        <p>8hs-13hs</p>
+                        <p>8hs-16hs</p>
+                        <p></p>
                         <p>8.30hs-11hs</p>
                         <p>11.30hs-14hs</p>
                         <p>14.30hs-17hs</p>
@@ -111,6 +115,7 @@
                     </span><span>
                         <h4>11-06-2025</h4>
                         <p>Practice Range Open</p>
+                        <p class="roundDay">GROUPS C and D FLINT ROUND</p>
                         <p>1st Round</p>
                         <p>2nd Round</p>
                         <p>3rd Round</p>
@@ -119,14 +124,14 @@
                 <div class="day"><span>
                         <h4>Friday</h4>
                         <p>8hs-16hs</p>
-                        <p>8hs-17hs</p>
+                        <p></p>
                         <p>9hs-12hs</p>
                         <p>12.30hs-15.30hs</p>
                         <p>16hs-19hs</p>
                     </span><span>
                         <h4>11-07-2025</h4>
-                        <p>Registration and equipment inspection</p>
                         <p>Practice range open</p>
+                        <p class="roundDay">INDOOR ROUND</p>
                         <p>1st Round</p>
                         <p>2nd Round</p>
                         <p>3rd Round</p>
