--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -229,6 +229,8 @@
         <script src="/resources/js/InscValidator.js">
             
         </script>
+                <div class="IcoWhatsDesk"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhatsDesk" src="/resources/img/logoWhatsDesk.png" alt="IconoWhats"></a></div>
+                <div class="IcoWhats"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhats" src="/resources/img/logoWhats.png" alt="IconoWhats"></a></div>
     </main>
 
     <footer class="footer">
