--- a/views/home/ubicacion.ejs
+++ b/views/home/ubicacion.ejs
@@ -43,6 +43,8 @@
         onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
         </button>
     </div>
+    <div class="IcoWhatsDesk"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhatsDesk" src="/resources/img/logoWhatsDesk.png" alt="IconoWhats"></a></div>
+    <div class="IcoWhats"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhats" src="/resources/img/logoWhats.png" alt="IconoWhats"></a></div>
 </main>
 <footer class="footer">
     <div class="containerFooter">
