--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -119,8 +119,8 @@
                 <option <%= user.Bowtype=='Bowhunter Recurve' ? "selected" : "" %> value="Bowhunter Recurve">Bowhunter Recurve (BH-R)</option>
                 <option <%= user.Bowtype=='Bowhunter Limited' ? "selected" : "" %> value="Bowhunter Limited">Bowhunter Limited (BL)</option>
                 <option <%= user.Bowtype=='Bowhunter Unlimited' ? "selected" : "" %> value="Bowhunter Unlimited">Bowhunter Unlimited (BU)</option>
-                <option <%= user.Bowtype=='Freestyle Limited Compound' ? "selected" : "" %> value="FS-C">Freestyle Limited Compound (FS-C)</option>
-                <option <%= user.Bowtype=='FS-R' ? "selected" : "" %> value="Freestyle Limited Recurve">Freestyle Limited Recurve (FS-R)</option>
+                <option <%= user.Bowtype=='Freestyle Limited Compound' ? "selected" : "" %> value="Freestyle Limited Compound">Freestyle Limited Compound (FS-C)</option>
+                <option <%= user.Bowtype=='Freestyle Limited Recurve' ? "selected" : "" %> value="Freestyle Limited Recurve">Freestyle Limited Recurve (FS-R)</option>
                 <option <%= user.Bowtype=='Freestyle Unlimited' ? "selected" : "" %> value="Freestyle Unlimited">Freestyle Unlimited (FU)</option>
                 <option <%= user.Bowtype=='Historical Bow' ? "selected" : "" %> value="Historical Bow">Historical Bow (HB)</option>
                 <option <%= user.Bowtype=='LongBow' ? "selected" : "" %> value="LongBow">LongBow (LB)</option>
