--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -198,6 +198,8 @@
                 </div>
             </div>
         </div>
+        <div class="IcoWhatsDesk"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhatsDesk" src="/resources/img/logoWhatsDesk.png" alt="IconoWhats"></a></div>
+        <div class="IcoWhats"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhats" src="/resources/img/logoWhats.png" alt="IconoWhats"></a></div>
     <footer class="footer">
         <div class="containerFooter">
             <img src="/resources/img/logoIFAA(@).png" alt="logoIFAA">
