--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -121,29 +121,29 @@
                 <label for="Bow type">Bow Type:</label>
                 <select class="form-control form-control-sm" id="Bow type" name="Bowtype">
                     <option value="" disabled selected>Select an option</option>
-                    <option <%=user.Bowtype=='Barebow Compound' ? "selected" : "" %> value=Barebow Compound">Barebow
+                    <option <%=user.Bowtype=='Barebow Compound (BB-C)' ? "selected" : "" %> value="Barebow Compound (BB-C)">Barebow
                         Compound (BB-C)</option>
-                    <option <%=user.Bowtype=='Barebow Recurve' ? "selected" : "" %> value="Barebow Recurve">Barebow
+                    <option <%=user.Bowtype=='Barebow Recurve (BB-R)' ? "selected" : "" %> value="Barebow Recurve (BB-R)">Barebow
                         Recurve (BB-R)</option>
-                    <option <%=user.Bowtype=='Bowhunter Compound' ? "selected" : "" %> value="Bowhunter
-                        Compound">Bowhunter Compound (BH-C)</option>
-                    <option <%=user.Bowtype=='Bowhunter Recurve' ? "selected" : "" %> value="Bowhunter
-                        Recurve">Bowhunter Recurve (BH-R)</option>
-                    <option <%=user.Bowtype=='Bowhunter Limited' ? "selected" : "" %> value="Bowhunter
-                        Limited">Bowhunter Limited (BL)</option>
-                    <option <%=user.Bowtype=='Bowhunter Unlimited' ? "selected" : "" %> value="Bowhunter
-                        Unlimited">Bowhunter Unlimited (BU)</option>
-                    <option <%=user.Bowtype=='Freestyle Limited Compound' ? "selected" : "" %> value="Freestyle Limited
-                        Compound">Freestyle Limited Compound (FS-C)</option>
-                    <option <%=user.Bowtype=='Freestyle Limited Recurve' ? "selected" : "" %> value="Freestyle Limited
-                        Recurve">Freestyle Limited Recurve (FS-R)</option>
-                    <option <%=user.Bowtype=='Freestyle Unlimited' ? "selected" : "" %> value="Freestyle
-                        Unlimited">Freestyle Unlimited (FU)</option>
-                    <option <%=user.Bowtype=='Historical Bow' ? "selected" : "" %> value="Historical Bow">Historical Bow
+                    <option <%=user.Bowtype=='Bowhunter Compound (BH-C)' ? "selected" : "" %> value="Bowhunter
+                        Compound (BH-C)">Bowhunter Compound (BH-C)</option>
+                    <option <%=user.Bowtype=='Bowhunter Recurve (BH-R)' ? "selected" : "" %> value="Bowhunter
+                        Recurve (BH-R)">Bowhunter Recurve (BH-R)</option>
+                    <option <%=user.Bowtype=='Bowhunter Limited (BL)' ? "selected" : "" %> value="Bowhunter
+                        Limited (BL)">Bowhunter Limited (BL)</option>
+                    <option <%=user.Bowtype=='Bowhunter Unlimited (BU)' ? "selected" : "" %> value="Bowhunter
+                        Unlimited (BU)">Bowhunter Unlimited (BU)</option>
+                    <option <%=user.Bowtype=='Freestyle Limited Compound (FS-C)' ? "selected" : "" %> value="Freestyle Limited
+                        Compound (FS-C)">Freestyle Limited Compound (FS-C)</option>
+                    <option <%=user.Bowtype=='Freestyle Limited Recurve (FS-R)' ? "selected" : "" %> value="Freestyle Limited
+                        Recurve (FS-R)">Freestyle Limited Recurve (FS-R)</option>
+                    <option <%=user.Bowtype=='Freestyle Unlimited (FU)' ? "selected" : "" %> value="Freestyle
+                        Unlimited (FU)">Freestyle Unlimited (FU)</option>
+                    <option <%=user.Bowtype=='Historical Bow (HB)' ? "selected" : "" %> value="Historical Bow (HB)">Historical Bow
                         (HB)</option>
-                    <option <%=user.Bowtype=='LongBow' ? "selected" : "" %> value="LongBow">LongBow (LB)</option>
-                    <option <%=user.Bowtype=='Traditional Recurve Bow' ? "selected" : "" %> value="Traditional Recurve
-                        Bow">Traditional Recurve Bow (TR)</option>
+                    <option <%=user.Bowtype=='LongBow (LB)' ? "selected" : "" %> value="LongBow (LB)">LongBow (LB)</option>
+                    <option <%=user.Bowtype=='Traditional Recurve Bow (TR)' ? "selected" : "" %> value="Traditional Recurve
+                        Bow (TR)">Traditional Recurve Bow (TR)</option>
                 </select>
                 <br>
                 <label for="Target">Target type:</label>
