--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -170,18 +170,18 @@
                         <label for="Bowtype">Bow Type(*):</label>
                         <select id="Bowtype" name="Bowtype" required>
                             <option value="" disabled selected hidden>Select an option</option>
-                            <option value="Barebow Compound">Barebow Compound (BB-C)</option>
-                            <option value="Barebow Recurve">Barebow Recurve (BB-R)</option>
-                            <option value="Bowhunter Compound">Bowhunter Compound (BH-C)</option>
-                            <option value="Bowhunter Recurve">Bowhunter Recurve (BH-R)</option>
-                            <option value="Bowhunter Limited">Bowhunter Limited (BL)</option>
-                            <option value="Bowhunter Unlimited">Bowhunter Unlimited (BU)</option>
-                            <option value="Freestyle Limited Compound">Freestyle Limited Compound (FS-C)</option>
-                            <option value="Freestyle Limited Recurve">Freestyle Limited Recurve (FS-R)</option>
-                            <option value="Freestyle Unlimited">Freestyle Unlimited (FU)</option>
-                            <option value="Historical Bow">Historical Bow (HB)</option>
-                            <option value="LongBow">LongBow (LB)</option>
-                            <option value="Traditional Recurve Bow">Traditional Recurve Bow (TR)</option>
+                            <option value="Barebow Compound (BB-C)">Barebow Compound (BB-C)</option>
+                            <option value="Barebow Recurve (BB-R)">Barebow Recurve (BB-R)</option>
+                            <option value="Bowhunter Compound (BH-C)">Bowhunter Compound (BH-C)</option>
+                            <option value="Bowhunter Recurve (BH-R)">Bowhunter Recurve (BH-R)</option>
+                            <option value="Bowhunter Limited (BL)">Bowhunter Limited (BL)</option>
+                            <option value="Bowhunter Unlimited (BU)">Bowhunter Unlimited (BU)</option>
+                            <option value="Freestyle Limited Compound (FS-C)">Freestyle Limited Compound (FS-C)</option>
+                            <option value="Freestyle Limited Recurve (FS-R)">Freestyle Limited Recurve (FS-R)</option>
+                            <option value="Freestyle Unlimited (FU)">Freestyle Unlimited (FU)</option>
+                            <option value="Historical Bow (HB)">Historical Bow (HB)</option>
+                            <option value="LongBow (LB)">LongBow (LB)</option>
+                            <option value="Traditional Recurve Bow (TR)">Traditional Recurve Bow (TR)</option>
                         </select>
                         <span class="error-message" id="Bowtype-error"></span>
                     </div>
