--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -103,48 +103,35 @@
                 <label for="Age class">Age Class:</label>
                 <select class="form-control form-control-sm" id="Age class" name="Ageclass">
                     <option value="" disabled selected>Select an option</option>
-                    <option <%=user.Ageclass=='Adult' ? "selected" : "" %> value="Adult">Adult (A)</option>
-                    <option <%=user.Ageclass=='Cub' ? "selected" : "" %> value="Cub">Cub (C)</option>
-                    <option <%=user.Ageclass=='Junior' ? "selected" : "" %> value="Junio">Junior (J)</option>
-                    <option <%=user.Ageclass=='Senior' ? "selected" : "" %> value="Senior">Senior (S)</option>
-                    <option <%=user.Ageclass=='Veteran' ? "selected" : "" %> value="Veteran">Veteran (V)</option>
-                    <option <%=user.Ageclass=='Young Adult' ? "selected" : "" %> value="Young Adult">Young Adult (YA)
+                    <option <%= user.Ageclass=== 'Adult' ? "selected" : "" %> value="Adult">Adult (A)</option>
+                    <option <%= user.Ageclass=== 'Cub' ? "selected" : "" %> value="Cub">Cub (C)</option>
+                    <option <%= user.Ageclass=== 'Junior' ? "selected" : "" %> value="Junio">Junior (J)</option>
+                    <option <%= user.Ageclass=== 'Senior' ? "selected" : "" %> value="Senior">Senior (S)</option>
+                    <option <%= user.Ageclass=== 'Veteran' ? "selected" : "" %> value="Veteran">Veteran (V)</option>
+                    <option <%= user.Ageclass=== 'Young Adult' ? "selected" : "" %> value="Young Adult">Young Adult (YA)
                     </option>
                 </select>
                 <br>
                 <label for="Gender">Gender:</label>
                 <select class="form-control form-control-sm" id="Gender" name="Gender">
-                    <option <%=user.Gender=='F' ? "selected" : "" %> value="F">Female (F)</option>
-                    <option <%=user.Gender=='M' ? "selected" : "" %> value="M">Male (M)</option>
+                    <option <%= user.Gender=== 'F' ? "selected" : "" %> value="F">Female (F)</option>
+                    <option <%= user.Gender=== 'M' ? "selected" : "" %> value="M">Male (M)</option>
                 </select>
                 <br>
                 <label for="Bow type">Bow Type:</label>
-                <select class="form-control form-control-sm" id="Bow type" name="Bowtype">
-                    <option value="" disabled selected>Select an option</option>
-                    <option <%=user.Bowtype=='Barebow Compound (BB-C)' ? "selected" : "" %> value="Barebow Compound (BB-C)">Barebow
-                        Compound (BB-C)</option>
-                    <option <%=user.Bowtype=='Barebow Recurve (BB-R)' ? "selected" : "" %> value="Barebow Recurve (BB-R)">Barebow
-                        Recurve (BB-R)</option>
-                    <option <%=user.Bowtype=='Bowhunter Compound (BH-C)' ? "selected" : "" %> value="Bowhunter
-                        Compound (BH-C)">Bowhunter Compound (BH-C)</option>
-                    <option <%=user.Bowtype=='Bowhunter Recurve (BH-R)' ? "selected" : "" %> value="Bowhunter
-                        Recurve (BH-R)">Bowhunter Recurve (BH-R)</option>
-                    <option <%=user.Bowtype=='Bowhunter Limited (BL)' ? "selected" : "" %> value="Bowhunter
-                        Limited (BL)">Bowhunter Limited (BL)</option>
-                    <option <%=user.Bowtype=='Bowhunter Unlimited (BU)' ? "selected" : "" %> value="Bowhunter
-                        Unlimited (BU)">Bowhunter Unlimited (BU)</option>
-                    <option <%=user.Bowtype=='Freestyle Limited Compound (FS-C)' ? "selected" : "" %> value="Freestyle Limited
-                        Compound (FS-C)">Freestyle Limited Compound (FS-C)</option>
-                    <option <%=user.Bowtype=='Freestyle Limited Recurve (FS-R)' ? "selected" : "" %> value="Freestyle Limited
-                        Recurve (FS-R)">Freestyle Limited Recurve (FS-R)</option>
-                    <option <%=user.Bowtype=='Freestyle Unlimited (FU)' ? "selected" : "" %> value="Freestyle
-                        Unlimited (FU)">Freestyle Unlimited (FU)</option>
-                    <option <%=user.Bowtype=='Historical Bow (HB)' ? "selected" : "" %> value="Historical Bow (HB)">Historical Bow
-                        (HB)</option>
-                    <option <%=user.Bowtype=='LongBow (LB)' ? "selected" : "" %> value="LongBow (LB)">LongBow (LB)</option>
-                    <option <%=user.Bowtype=='Traditional Recurve Bow (TR)' ? "selected" : "" %> value="Traditional Recurve
-                        Bow (TR)">Traditional Recurve Bow (TR)</option>
-                </select>
+<select class="form-control form-control-sm" id="Bow type" name="Bowtype">
+    <option value="" disabled selected>Select an option</option>
+    <option <%= user.Bowtype === 'Barebow Compound (BB-C)' ? 'selected' : '' %> value="Barebow Compound (BB-C)">Barebow Compound (BB-C)</option>
+    <option <%= user.Bowtype === 'Barebow Recurve (BB-R)' ? 'selected' : '' %> value="Barebow Recurve (BB-R)">Barebow Recurve (BB-R)</option>
+    <option <%= user.Bowtype === 'Bowhunter Compound (BH-C)' ? 'selected' : '' %> value="Bowhunter Compound (BH-C)">Bowhunter Compound (BH-C)</option>
+    <option <%= user.Bowtype === 'Bowhunter Recurve (BH-R)' ? 'selected' : '' %> value="Bowhunter Recurve (BH-R)">Bowhunter Recurve (BH-R)</option>
+    <option <%= user.Bowtype === 'Bowhunter Limited (BL)' ? 'selected' : '' %> value="Bowhunter Limited (BL)">Bowhunter Limited (BL)</option>
+    <option <%= user.Bowtype === 'Bowhunter Unlimited (BU)' ? 'selected' : '' %> value="Bowhunter Unlimited (BU)">Bowhunter Unlimited (BU)</option>
+    <option <%= user.Bowtype === 'Freestyle Limited Compound (FS-C)' ? 'selected' : '' %> value="Freestyle Limited Compound (FS-C)">Freestyle Limited Compound (FS-C)</option>
+    <option <%= user.Bowtype === 'Freestyle Limited Recurve (FS-R)' ? 'selected' : '' %> value="Freestyle Limited Recurve (FS-R)">Freestyle Limited Recurve (FS-R)</option>
+    <option <%= user.Bowtype === 'Freestyle Unlimited (FU)' ? 'selected' : '' %> value="Freestyle Unlimited (FU)">Freestyle Unlimited (FU)</option>
+    <option <%= user.Bowtype === 'Traditional Recurve Bow (TR)' ? 'selected' : '' %> value="Traditional Recurve Bow (TR)">Traditional Recurve Bow (TR)</option>
+</select>
                 <br>
                 <label for="Target">Target type:</label>
                 <select class="form-control form-control-sm" id="Target" name="Target" required>
