--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -130,6 +130,8 @@
     <option <%= user.Bowtype === 'Freestyle Limited Compound (FS-C)' ? 'selected' : '' %> value="Freestyle Limited Compound (FS-C)">Freestyle Limited Compound (FS-C)</option>
     <option <%= user.Bowtype === 'Freestyle Limited Recurve (FS-R)' ? 'selected' : '' %> value="Freestyle Limited Recurve (FS-R)">Freestyle Limited Recurve (FS-R)</option>
     <option <%= user.Bowtype === 'Freestyle Unlimited (FU)' ? 'selected' : '' %> value="Freestyle Unlimited (FU)">Freestyle Unlimited (FU)</option>
+    <option <%= user.Bowtype === 'Historical Bow (HB)' ? 'selected' : '' %> value="Historical Bow (HB)">Historical Bow (HB)</option>
+    <option <%= user.Bowtype === 'LongBow (LB)' ? 'selected' : '' %> value="LongBow (LB)">LongBow (LB)</option>
     <option <%= user.Bowtype === 'Traditional Recurve Bow (TR)' ? 'selected' : '' %> value="Traditional Recurve Bow (TR)">Traditional Recurve Bow (TR)</option>
 </select>
                 <br>
