--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -83,7 +83,7 @@
                     <option <%=user.Federation=='FSTA' ? "selected" : "" %> value="FSTA">FSTA</option>
                     <option <%=user.Federation=='SFAA' ? "selected" : "" %> value="SFAA">SFAA</option>
                     <option <%=user.Federation=='SAA' ? "selected" : "" %> value="SAA">SAA</option>
-                    <option <%=user.Federation=='SANIFA' ? "selected" : "" %> value="SANIFA">SANIFA</option>
+                    <option <%=user.Federation=='SANIFAA' ? "selected" : "" %> value="SANIFAA">SANIFAA</option>
                     <option <%=user.Federation=='AAL' ? "selected" : "" %> value="AAL">AAL</option>
                     <option <%=user.Federation=='SFSF' ? "selected" : "" %> value="SFSF">SFSF</option>
                     <option <%=user.Federation=='FAAS' ? "selected" : "" %> value="FAAS">FAAS</option>
