--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -121,7 +121,7 @@
                             <option value="FSTA">FSTA</option>
                             <option value="SFAA">SFAA</option>
                             <option value="SAA">SAA</option>
-                            <option value="SANIFAA">"SANIFAA</option>
+                            <option value="SANIFAA">SANIFAA</option>
                             <option value="AAL">AAL</option>
                             <option value="SFSF">SFSF</option>
                             <option value="FAAS">FAAS</option>
