--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -56,29 +56,23 @@
                 </div>
                 <div class="hotelLeft">
                     <a href="https://hotelkonkemardelplata.com/">www.hotelkonkemardelplata.com</a>
+                    <p>7-day, 6-night program, including daily breakfast</p>
+                    <p>Foreigners tax-free (21% off)</p>
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>Room</th>
-                                <th>City View</th>
-                                <th>Sea View</th>
+                                <th>From</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Single</td>
-                                <td>Us$185</td>
-                                <td>Us$240</td>
-                            </tr>
-                            <tr>
                                 <td>Double</td>
-                                <td>Us$195</td>
-                                <td>Us$250</td>
+                                <td>US$ 1170</td>
                             </tr>
                             <tr>
                                 <td>Triple</td>
-                                <td>Us$250</td>
-                                <td>Us$320</td>
+                                <td>US$ 1500</td>
                             </tr>
                         </tbody>
                     </table>
@@ -107,25 +101,23 @@
                     </div>
                 </div>
                 <div class="hotelLeft">
+                    <p>7-day, 6-night program, including daily breakfast</p>
+                    <p>Foreigners tax-free (21% off)</p>
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>Room</th>
-                                <th>Price </th>
+                                <th>From </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Single</td>
-                                <td>Us$60</td>
-                            </tr>
-                            <tr>
                                 <td>Double</td>
-                                <td>Us$76</td>
+                                <td>US$ 456</td>
                             </tr>
                             <tr>
                                 <td>Triple</td>
-                                <td>us$110</td>
+                                <td>US$ 660</td>
                             </tr>
                         </tbody>
                     </table>
@@ -134,6 +126,20 @@
                         <p>Whatsapp +5492235373923</p>
                         <p>hotelnovi@gmail.com</p>
                     </span>
+                </div>
+            </div>
+            <div class="club360">
+                <img src="/resources/img/club 360.png" alt="club 360">
+                <h3>Services:</h3>
+                <ul>
+                    <li>Transfers from Buenos Aires airports to hotels in Mar del Plata (round trip).</li>
+                    <li>Daily transfers from hotels in Mar del Plata to Santa Clara del Mar (round trip).</li>
+                    <li>Excursions, tours, and tourist advice.</li>
+                </ul>
+                <h3>Inquires and reservation</h3>
+                <div>
+                    <p>Whatsapp +54 9 223 6872911</p>
+                    <p>serviciosclub360@gmail.com</p>
                 </div>
             </div>
             <div class="needHelpContainer turismNeed">
